Crash when changing double click time on Wayland
I just got this crash when accidentally changing the double click time (org.gnome.desktop.peripherals.mouse double-click
) on Wayland. It does not seem to happen on X11.
#0 g_data_set_internal (datalist=0x2f20100, key_id=70, new_data=0x0, new_destroy_func=0x0, dataset=0x0) at ../../../../devel/gnome/glib/glib/gdataset.c:362
d = 0xaaaaaaaaaaaaaaa8
old_d = <optimized out>
old = {key = <optimized out>, data = <optimized out>, destroy = <optimized out>}
data = <optimized out>
data_last = <optimized out>
data_end = <optimized out>
#1 0x00007f2c34a5888a in g_object_unref (_object=<optimized out>) at ../../../../devel/gnome/glib/gobject/gobject.c:3510
weak_locations = <optimized out>
object = <optimized out>
old_ref = -1431655766
retry_atomic_decrement1 = <optimized out>
object = <optimized out>
old_ref = <optimized out>
__func__ = "g_object_unref"
retry_atomic_decrement1 = <optimized out>
retry_atomic_decrement2 = <optimized out>
_g_boolean_var_ = <optimized out>
gaig_temp = <optimized out>
has_toggle_ref = <optimized out>
gaicae_oldval = <optimized out>
weak_locations = <optimized out>
gaig_temp = <optimized out>
weak_ref_location = <optimized out>
gaig_temp = <optimized out>
has_toggle_ref = <optimized out>
gaicae_oldval = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
was_present = <optimized out>
#2 g_object_unref (_object=0x2f200f0) at ../../../../devel/gnome/glib/gobject/gobject.c:3416
object = 0x2f200f0
old_ref = <optimized out>
__func__ = "g_object_unref"
retry_atomic_decrement1 = <optimized out>
retry_atomic_decrement2 = <optimized out>
gaig_temp = <optimized out>
has_toggle_ref = <optimized out>
gaicae_oldval = <optimized out>
weak_locations = <optimized out>
gaig_temp = <optimized out>
weak_ref_location = <optimized out>
gaig_temp = <optimized out>
has_toggle_ref = <optimized out>
gaicae_oldval = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
was_present = <optimized out>
#3 0x00007f2c33f5caed in clutter_text_dirty_cache (text=<optimized out>, text=<optimized out>) at ../../../../devel/gnome/mutter/clutter/clutter/clutter-text.c:825
priv = 0x1ba5080
i = 5
#4 0x00007f2c33f6019c in clutter_text_settings_changed_cb (text=0x1ba5510) at ../../../../devel/gnome/mutter/clutter/clutter/clutter-text.c:907
priv = <optimized out>
password_hint_time = 0
settings = <optimized out>
#5 0x00007f2c34a53891 in g_closure_invoke (closure=0x1ba5630, return_value=return_value@entry=0x0, n_param_values=1, param_values=param_values@entry=0x7f2c06a4daf0, invocation_hint=invocation_hint@entry=0x7f2c06a4da90) at ../../../../devel/gnome/glib/gobject/gclosure.c:810
marshal = 0x7f2c34a55810 <g_cclosure_marshal_VOID__VOID>
marshal_data = 0x0
in_marshal = 0
real_closure = 0x1ba5610
__func__ = "g_closure_invoke"
#6 0x00007f2c34a65a5f in signal_emit_unlocked_R (node=node@entry=0x854b30, detail=detail@entry=0, instance=instance@entry=0x7f2c14005300, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7f2c06a4daf0) at ../../../../devel/gnome/glib/gobject/gsignal.c:3741
tmp = <optimized out>
handler = 0x1ba2640
accumulator = 0x0
emission = {next = 0x7f2c06a4e030, instance = 0x7f2c14005300, ihint = {signal_id = 65, detail = 0, run_type = (G_SIGNAL_RUN_FIRST | G_SIGNAL_ACCUMULATOR_FIRST_RUN)}, state = EMISSION_RUN, chain_type = 4}
class_closure = 0x854810
hlist = <optimized out>
handler_list = 0x1b9f180
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 65
max_sequential_handler_number = 28982
return_value_altered = 1
EMIT_RESTART = <optimized out>
#7 0x00007f2c34a6bed9 in g_signal_emit_valist (instance=instance@entry=0x7f2c14005300, signal_id=signal_id@entry=65, detail=detail@entry=0, var_args=var_args@entry=0x7f2c06a4dc70) at ../../../../devel/gnome/glib/gobject/gsignal.c:3497
instance_and_params = 0x7f2c06a4daf0
signal_return_type = <optimized out>
param_values = 0x7f2c06a4db08
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
#8 0x00007f2c34a6c63b in g_signal_emit_by_name (instance=0x7f2c14005300, detailed_signal=0x7f2c33f8c150 "settings-changed") at ../../../../devel/gnome/glib/gobject/gsignal.c:3593
var_args = {{gp_offset = 16, fp_offset = 48, overflow_arg_area = 0x7f2c06a4dd80, reg_save_area = 0x7f2c06a4dc90}}
detail = <optimized out>
signal_id = 65
itype = 8734080
__func__ = "g_signal_emit_by_name"
#9 0x00007f2c34a576c5 in g_object_notify_queue_thaw (object=0x859940, nqueue=<optimized out>) at ../../../../devel/gnome/glib/gobject/gobject.c:341
pspecs_mem = {0x7f2c140053a0, 0x8549f0, 0x859940, 0x7f2c06a4dde0, 0x7f2c06a4ddc0, 0x7f2c34a77219 <g_value_unset+25>, 0x8549f0, 0x7f2c06a4deb0, 0x7f2c06a4de30, 0x7f2c34a58acb <object_set_property+187>, 0x60c1c0, 0x200859950, 0x0, 0x0, 0x0, 0x7f2c34a5789d <g_object_notify_queue_freeze+93>}
pspecs = 0x7f2c06a4dd80
free_me = 0x0
slist = <optimized out>
n_pspecs = 1
__func__ = "g_object_notify_queue_thaw"
#10 0x00007f2c34a5acc4 in g_object_setv (values=<optimized out>, names=<optimized out>, n_properties=<optimized out>, object=0x859940) at ../../../../devel/gnome/glib/gobject/gobject.c:2413
i = <optimized out>
nqueue = 0x60c1c0
pspec = <optimized out>
obj_type = 8734944
i = <optimized out>
nqueue = <optimized out>
pspec = <optimized out>
obj_type = <optimized out>
__func__ = "g_object_setv"
_g_boolean_var_ = <optimized out>
#11 g_object_setv (object=0x859940, n_properties=<optimized out>, names=<optimized out>, values=<optimized out>) at ../../../../devel/gnome/glib/gobject/gobject.c:2384
i = <optimized out>
nqueue = <optimized out>
pspec = <optimized out>
obj_type = <optimized out>
__func__ = "g_object_setv"
#12 0x00007f2c34a5b96d in g_object_set_property (object=<optimized out>, property_name=<optimized out>, value=value@entry=0x7f2c06a4deb0) at ../../../../devel/gnome/glib/gobject/gobject.c:2701
No locals.
#13 0x00007f2c34b91aac in g_settings_binding_key_changed (settings=<optimized out>, key=<optimized out>, user_data=0x637e40) at ../../../../devel/gnome/glib/gio/gsettings.c:2696
binding = 0x637e40
value = {g_type = 24, data = {{v_int = 277, v_uint = 277, v_long = 277, v_ulong = 277, v_int64 = 277, v_uint64 = 277, v_float = 3.88159675e-43, v_double = 1.3685618389802529e-321, v_pointer = 0x115}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
variant = 0x7f2c0c016100
__func__ = "g_settings_binding_key_changed"
#14 0x00007f2c34a53891 in g_closure_invoke (closure=0x7f2bf404f8d0, return_value=return_value@entry=0x0, n_param_values=2, param_values=param_values@entry=0x7f2c06a4e0a0, invocation_hint=invocation_hint@entry=0x7f2c06a4e040) at ../../../../devel/gnome/glib/gobject/gclosure.c:810
marshal = 0x7f2c34a56390 <g_cclosure_marshal_VOID__STRING>
marshal_data = 0x0
in_marshal = 0
real_closure = 0x7f2bf404f8b0
__func__ = "g_closure_invoke"
#15 0x00007f2c34a65a5f in signal_emit_unlocked_R (node=node@entry=0x5eea20, detail=detail@entry=425, instance=instance@entry=0x7f2c10006210, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7f2c06a4e0a0) at ../../../../devel/gnome/glib/gobject/gsignal.c:3741
tmp = <optimized out>
handler = 0x7f2c1400a580
accumulator = 0x0
emission = {next = 0x7f2c06a4e4d0, instance = 0x7f2c10006210, ihint = {signal_id = 32, detail = 425, run_type = (G_SIGNAL_RUN_FIRST | G_SIGNAL_ACCUMULATOR_FIRST_RUN)}, state = EMISSION_RUN, chain_type = 4}
class_closure = 0x63f430
hlist = <optimized out>
handler_list = 0x7f2bf401fc40
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 32
max_sequential_handler_number = 28982
return_value_altered = 1
EMIT_RESTART = <optimized out>
#16 0x00007f2c34a6bed9 in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7f2c06a4e238) at ../../../../devel/gnome/glib/gobject/gsignal.c:3497
instance_and_params = 0x7f2c06a4e0a0
signal_return_type = <optimized out>
param_values = 0x7f2c06a4e0b8
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
#17 0x00007f2c34a6c43d in g_signal_emit (instance=instance@entry=0x7f2c10006210, signal_id=<optimized out>, detail=<optimized out>) at ../../../../devel/gnome/glib/gobject/gsignal.c:3553
var_args = {{gp_offset = 32, fp_offset = 48, overflow_arg_area = 0x7f2c06a4e310, reg_save_area = 0x7f2c06a4e250}}
#18 0x00007f2c34b91670 in g_settings_real_change_event (settings=0x7f2c10006210, keys=0x7f2c06a4e66c, n_keys=<optimized out>) at ../../../../devel/gnome/glib/gio/gsettings.c:392
key = 0x5e6310 "double-click"
i = 0
#19 0x00007f2c34b1a4b1 in _g_cclosure_marshal_BOOLEAN__POINTER_INTv (closure=<optimized out>, return_value=0x7f2c06a4e490, instance=<optimized out>, args=<optimized out>, marshal_data=<optimized out>, n_params=<optimized out>, param_types=0x641dd0) at ../../../../devel/gnome/glib/gio/gmarshal-internal.c:426
cc = <optimized out>
data1 = <optimized out>
data2 = <optimized out>
callback = <optimized out>
v_return = <optimized out>
arg0 = 0x2
arg1 = 2
args_copy = {{gp_offset = 40, fp_offset = 48, overflow_arg_area = 0x7f2c06a4e660, reg_save_area = 0x7f2c06a4e5a0}}
__func__ = "_g_cclosure_marshal_BOOLEAN__POINTER_INTv"
#20 0x00007f2c34a53ab8 in _g_closure_invoke_va (closure=closure@entry=0x63d6a0, return_value=return_value@entry=0x7f2c06a4e490, instance=instance@entry=0x7f2c10006210, args=args@entry=0x7f2c06a4e588, n_params=2, param_types=0x641dd0) at ../../../../devel/gnome/glib/gobject/gclosure.c:873
marshal = 0x7f2c34a51f90 <g_type_class_meta_marshalv>
marshal_data = 0xa0
in_marshal = 0
real_closure = 0x63d680
__func__ = "_g_closure_invoke_va"
#21 0x00007f2c34a6b57b in g_signal_emit_valist (instance=0x7f2c10006210, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7f2c06a4e588) at ../../../../devel/gnome/glib/gobject/gsignal.c:3406
return_accu = <optimized out>
accu = {g_type = 20, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
accumulator = 0x63ffe0
emission = {next = 0x0, instance = 0x7f2c10006210, ihint = {signal_id = 33, detail = 0, run_type = (G_SIGNAL_RUN_LAST | G_SIGNAL_ACCUMULATOR_FIRST_RUN)}, state = EMISSION_RUN, chain_type = 6543056}
signal_id = 33
instance_type = <optimized out>
emission_return = {g_type = 20, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
rtype = 20
static_scope = 0
fastpath_handler = <optimized out>
closure = <optimized out>
run_type = <optimized out>
hlist = <optimized out>
l = <optimized out>
fastpath = 1
instance_and_params = <optimized out>
signal_return_type = <optimized out>
param_values = <optimized out>
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
#22 0x00007f2c34a6c43d in g_signal_emit (instance=instance@entry=0x7f2c10006210, signal_id=<optimized out>, detail=detail@entry=0) at ../../../../devel/gnome/glib/gobject/gsignal.c:3553
var_args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7f2c06a4e660, reg_save_area = 0x7f2c06a4e5a0}}
#23 0x00007f2c34b92be3 in settings_backend_changed (target=<optimized out>, backend=<optimized out>, key=<optimized out>, origin_tag=<optimized out>) at ../../../../devel/gnome/glib/gio/gsettings.c:452
quark = 425
settings = 0x7f2c10006210
ignore_this = 111470280
i = <optimized out>
#24 0x00007f2c34b8ca36 in g_settings_backend_invoke_closure (user_data=0x7f2c10014b80) at ../../../../devel/gnome/glib/gio/gsettingsbackend.c:273
closure = 0x7f2c10014b80
#25 0x00007f2c3496532c in g_main_dispatch (context=0x8e15c0) at ../../../../devel/gnome/glib/glib/gmain.c:3337
dispatch = 0x7f2c34961720 <g_idle_dispatch>
prev_source = 0x0
begin_time_nsec = 0
was_in_call = 0
user_data = 0x7f2c10014b80
callback = 0x7f2c34b8ca10 <g_settings_backend_invoke_closure>
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
source = 0x7f2c100169e0
current = 0x7f2bf4021150
i = 0
__func__ = "g_main_dispatch"
#26 g_main_context_dispatch (context=0x8e15c0) at ../../../../devel/gnome/glib/glib/gmain.c:4055
No locals.
#27 0x00007f2c349656b8 in g_main_context_iterate (context=0x8e15c0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../../devel/gnome/glib/glib/gmain.c:4131
max_priority = 2147483647
timeout = -1
some_ready = 1
nfds = <optimized out>
allocated_nfds = 2
fds = 0x7f2bf4091750
begin_time_nsec = 0
#28 0x00007f2c349659a3 in g_main_loop_run (loop=0x7f2bf4004890) at ../../../../devel/gnome/glib/glib/gmain.c:4329
self = <optimized out>
__func__ = "g_main_loop_run"
#29 0x00007f2c33ddb31a in input_thread (seat_impl=0x8f6ae0) at ../../../../devel/gnome/mutter/src/backends/native/meta-seat-impl.c:2730
source = <optimized out>
udev = <optimized out>
xkb_keymap = <optimized out>
#30 0x00007f2c3498edf5 in g_thread_proxy (data=0x8cdc60) at ../../../../devel/gnome/glib/glib/gthread.c:826
thread = 0x8cdc60
__func__ = "g_thread_proxy"
#31 0x00007f2c33045269 in start_thread () from /lib64/libpthread.so.0
No symbol table info available.
#32 0x00007f2c33b83653 in clone () from /lib64/libc.so.6
No symbol table info available.